[workspace]
members = [
    "crates/observation",
    "crates/task-runs",
    "crates/task-sessions",
    "crates/task",
    "crates/scryer",
    "crates/qed-gha",
    "crates/qed",
    "crates/manifest-bind",
]
resolver = "2"

[workspace.package]
version = "0.8.16"
edition = "2021"
authors = ["yah Dev <human@yah.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yah-ai/qed"

# During development, patch crates.io with the local yah-base crate paths
# (qed depends only on yah-base, not yubaba — the cross-patch loop is broken).
# Stripped on export (scripts/export-oss.sh) and dropped once yah-base is
# published to crates.io.
[workspace.dependencies]
# Turso pin — keep in lockstep with yah root and external/turso-backup (0.6.1).
turso = "0.6.1"
turso_core = { version = "0.6.1", features = [] }

