[package]
name = "observation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared event types for the scryer observation substrate (hoisted from task-runs)"

[lib]
name = "observation"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
workload-spec = { package = "yah-workload-spec", version = "0.8.16" }
