[package]
name = "yah-qed-gha"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Rust GHA YAML workflow runtime for QED (parser + types; F1)"

[lib]
name = "yah_qed_gha"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1.0"
# F4: bash step exec + GITHUB_OUTPUT / GITHUB_ENV scratch files.
tempfile = "3"
# F4: TOML loader for .yah/qed/gha-actions.toml override config.
toml = "0.8"
# F6: parse `docker buildx --metadata-file` output (digest + imageid).
serde_json = "1.0"
# T3: content-address the vendored github-workflow schema (same blake3 scheme
# as the import primitive's content_hash).
blake3 = "1"

[dev-dependencies]
serde_json = "1.0"
