[package]
name = "yah-qed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CI scheduler: pipelines, step DAGs, triggers, and pass/fail gating over task execution"

[lib]
name = "yah_qed"
path = "src/lib.rs"

[[bin]]
name = "yah-qed"
path = "src/bin/qed.rs"

[dependencies]
velveteen = { path = "../velveteen", version = "0.8.21" }
velveteen-exec = { path = "../velveteen-exec", version = "0.8.21" }
task-runs = { path = "../task-runs", version = "0.8.21" }
workload-spec = { package = "yah-workload-spec", version = "0.8.21" }
yah-scryer = { path = "../scryer", version = "0.8.21" }
observation = { path = "../observation", version = "0.8.21" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", features = ["preserve_order"] }
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "process", "io-util"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
# Staging dir for the release-channel publish layout (R330-F3) before handoff
# to a ReleasePublisher.
tempfile = "3"
# Authenticode adapter (R509-F2): decode a base64-stored PKCS#12 cert blob
# resolved from the secrets bridge into the raw .pfx bytes.
base64 = "0.22"
# Sparkle adapter (R509-F3): EdDSA (ed25519) sign of the update archive for the
# appcast `sparkle:edSignature`. BSD-3-Clause.
ed25519-dalek = "2"
# Native-tarball packaging (R407-T2): write a static musl Rust binary + a
# workload-spec manifest into a .tar.gz consumable by Kamaji.
tar = "0.4"
flate2 = "1"
# musl-static cross-compile preflight (R407-T3): walks a workspace package's
# transitive dep tree to flag glibc-only crates before the cross build.
cargo_metadata = "0.18"
# W200-F9: dispatch StepKind::GhaWorkflow into the native GHA runtime.
yah-qed-gha = { path = "../qed-gha", version = "0.8.21" }
# R533-F1 (W224): blake3 content-hash pin for an imported `workflow.yml`
# source. Same content-addressing primitive the rest of yah uses (kept at the
# workspace-wide `1.x` line).
blake3 = "1"
indexmap = { version = "2", features = ["serde"] }
# R487 follow-up: vault-backed `~/.yah/qed/secrets.toml` resolver — maps GHA
# secret names to vault slot names so workflows that reference
# ${{ secrets.X }} get the same value GHA's secret store would.
fob = { version = "0.8.21" }
# W209: pipeline outputs → manifest bind. Parse-time schema (BindSpec,
# OutputDecl, OutputRef, ValueType, Intent) consumed by the pipeline TOML
# loader; the applier itself runs at step boundaries inside the runner.
manifest-bind = { path = "../manifest-bind", version = "0.8.21" }
# R533-T10 (W224): JSON Schema derivation for the .yah/qed/*.toml pipeline
# format. Optional + default-off so the runtime binary deps don't carry
# schemars; xtask turns it on to generate qed-pipeline.toml.schema.json (same
# pattern cloud/workload-spec use).
schemars = { version = "0.8", optional = true }

[features]
# Derive `schemars::JsonSchema` on the pipeline-manifest type graph. Off by
# default — only the schema-emit xtask needs it.
json-schema = ["dep:schemars"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
