[package]
name = "task-runs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Lossless command-run capture with multi-tier observation (bytes, beholders, triage, shims)"
publish = false

[lib]
name = "task_runs"
path = "src/lib.rs"

[dependencies]
observation = { path = "../observation" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
turso = { workspace = true }
portable-pty = "0.8"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
toml = "0.8"
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
